--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2020-05-06  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION (Version,Date): Release 0.0.5
+
 	* R/expectations_xl.R (expect_equivalent_xl): Document 'class' argument
 	from updated tinytest version 1.2.0
 	* man/ttdo_boolean_and_message_tests.Rd: Updated
