--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2020-07-27  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION (Version,Date): Release 0.0.6
+
 	* R/expectations_xl.R (expect_identical_xl): Correct likely
 	copy-and-paste error with thanks to John Blischak
 
