--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2021-01-23  Dirk Eddelbuettel  <edd@debian.org>
 
-	* .Rbuildignore: 
+        * .github/workflows/ci.yaml: Add CI runner using r-ci
+	* README.md: Add new badge
 
 2020-07-27  Dirk Eddelbuettel  <edd@debian.org>
 
