--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-06-02  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (URL, BugReport): Add URL and BugReports entries
+
 2021-01-23  Dirk Eddelbuettel  <edd@debian.org>
 
         * .github/workflows/ci.yaml: Add CI runner using r-ci
