--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2021-07-06  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Release 0.0.7
+
+2021-07-06  Mark van der Loo  <mark.vanderloo@gmail.com>
+
+	* R/methods.R: Update for tinytest 1.3.1
+	* R/expectations_xls.R: Idem
+
 2021-06-02  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (URL, BugReport): Add URL and BugReports entries
@@ -9,7 +18,7 @@
 
 2020-07-27  Dirk Eddelbuettel  <edd@debian.org>
 
-	* DESCRIPTION (Version,Date): Release 0.0.6
+	* DESCRIPTION (Version, Date): Release 0.0.6
 
 	* R/expectations_xl.R (expect_identical_xl): Correct likely
 	copy-and-paste error with thanks to John Blischak
