--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-07-08  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/expectations_xl.R (expect_equivalent_xl): Use first sprintf
+	argument in template to appease new R installation
+
 2021-07-06  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.7
