--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-12-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/expectations_xl.R: Correct the initial change for 'strict'
+	* man/expect_equal_xl.Rd: Update documentation
+	* man/ttdo_boolean_and_message_tests.Rd: Idem
+
 2022-12-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/expectations_xl.R: Add 'strict' argument to code
