--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2025-01-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/expectations.R (expect_equal_with_diff): Return subclassed result
+	if difference has been seen, similar to 'visual equal'
+
 2025-01-18  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro version and date
