--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2025-01-22  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/visual.R: Add reference to 'data URI scheme' used to return png
+	* man/expect_visual_equal_with_diff.Rd: Regenerated
+
 2025-01-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.10
